# AnalisisSeguridad

./: .gitignore  README.md  presentacion.md  pyproject.toml
data/: repos.json
data/results/: Anthropic-Cybersecurity-Skills-codeql.json  Anthropic-Cybersecurity-Skills-sbom.json  Anthropic-Cybersecurity-Skills_temp.sarif  DeepSeek-TUI-grype-raw.json  DeepSeek-TUI-grype.json  DeepSeek-TUI-sbom.json  DeepSeek-TUI_temp.sarif  FinceptTerminal-sbom.json  TradingAgents-codeql.json  TradingAgents-grype-raw.json  TradingAgents-grype.json  TradingAgents-sbom.json  TradingAgents_temp.sarif  Understand-Anything-codeql.json  Understand-Anything-grype-raw.json  Understand-Anything-grype.json  Understand-Anything-sbom.json  Understand-Anything_temp.sarif  agency-agents-sbom.json  ai-engineering-from-scratch-codeql.json  ai-engineering-from-scratch-grype-raw.json  ai-engineering-from-scratch-grype.json  ai-engineering-from-scratch-sbom.json  ai-engineering-from-scratch_temp.sarif  andrej-karpathy-skills-sbom.json  chrome-devtools-mcp-grype-raw.json  chrome-devtools-mcp-grype.json  chrome-devtools-mcp-sbom.json  claude-code-action-grype-raw.json  claude-code-action-grype.json  claude-code-action-sbom.json  claude-plugins-official-codeql.json  claude-plugins-official-grype-raw.json  claude-plugins-official-grype.json  claude-plugins-official-sbom.json  claude-plugins-official_temp.sarif  codegraph-grype-raw.json  codegraph-grype.json  (+37 more)
evidence/: README.md
results/: resumen_hallazgos.md
scripts/: analyze_cicd.py  analyze_results.py  build_report_sections.py  reproducir_analisis.md
